--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,46 +4,24 @@ on:
     types: [opened]
   workflow_dispatch :
   push :
-    branches:
+    branches:    
       - 'main'
-env :
-  API_URL : "https://int.api.zscwp.io"
-  AUTH_URL : "https://int-auth.zscwp.io"
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses : ZscalerCWP/Zscaler-IaC-Action@main
+      - uses : ZscalerCWP/Zscaler-IaC-Action@v1.1.0
         id : iac-scan
         with:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
           client_secret : ${{ secrets.ZSCANNER_CLIENT_SECRET }}
           fail_build : 'true'
           output_format : 'human+github-sarif'
-          region : 'CUSTOM'
+          region : 'US'
       - run : echo ${{ steps.iac-scan.outputs.sarif_file_path }}
       - name: Upload SARIF file
         if: ${{ success() || failure() && (steps.iac-scan.outputs.sarif_file_path != '') }}
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: ${{ steps.iac-scan.outputs.sarif_file_path }}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
